--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,15 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+
+[env:esp01]
+platform = espressif8266
+board = esp01
+framework = arduino
+upload_speed = 115200
+
+[env:esp12e]
+platform = espressif8266
+board = esp12e
+framework = arduino
+upload_speed = 9600
