--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ framework = arduino
 platform = espressif8266
 board = esp01
 framework = arduino
+lib_ldf_mode = deep+
 
 [env:esp12e]
 platform = espressif8266
